--- a/css/index.css
+++ b/css/index.css
@@ -1,108 +1,250 @@
 @import "./about.css";
 @import "./blog.css";
 @import "./card.css";
-body{
-  font-family: Arial, Helvetica, sans-serif;
-}
-h1{
-display: inline;
-}
-h2{
-  display: inline;
+
+@media screen and (max-width: 1000px) {
+  body {
+    font-family: Arial, Helvetica, sans-serif;
   }
-h3{
-  display: inline;
-}
-a{
-  text-decoration: none;
-  color:black;
-  font-weight: bold;
-  text-align: center;
+
+  h1 {
+    display: inline;
+  }
+
+  h2 {
+    display: inline;
+  }
+
+  h3 {
+    display: inline;
+  }
+
+  a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    text-align: center;
+  }
+
+  .wrapper {
+    width: 100%;
+  }
+
+  .right-nav {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 20px;
+    border: 2px solid darkolivegreen;
+  }
+
+  .about {
+    display: inline;
+    font-size: larger;
+    text-align: right;
+    text-decoration: none;
+    margin-block-start: 1.67em;
+  }
+
+  .top-navbar {
+    display: flex;
+    flex-direction: row;
+    align-items: space-around;
+    width: 100%;
+    gap: 31vw;
+    border-bottom: 4px solid darkolivegreen;
+  }
+
+  .introduction {
+    background-image: url(../images/pretty-harriman.jpg);
+    background-blend-mode: soft-light;
+    background-size: 100% 100%;
+    opacity: 80%;
+
+  }
+
+  .intro-text {
+    font-family: fantasy;
+    kerning: 20px;
+    font-size: large;
+    background-color: aliceblue;
+    margin: 30px;
+    border-radius: 4px;
+    padding: 10px;
+
+  }
+
+  footer {
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+  }
+
+  s .email-form {
+    display: inline;
+  }
+
+  #logo {
+    width: 100px;
+    height: 100px;
+  }
+
+  .blog-nav-top {
+    font-family: fantasy;
+    color: darkolivegreen;
+    kerning: 20px;
+    font-size: x-large;
+    border-bottom: 2px solid darkgoldenrod;
+  }
+
+  .blog-entry {
+    border: 1px dashed black;
+    margin: 2px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    background-color: rgb(238, 223, 187);
+
+  }
+
+  #fbicon {
+    height: 35px;
+    width: 35px;
+    vertical-align: bottom;
+  }
+
+  #instaicon {
+    height: 30px;
+    width: 30px;
+    vertical-align: bottom;
+  }
 }
 
-.wrapper {
-  display: grid;
-  grid-template-columns: repeat(6, 200px);
-  gap: 40px;
-  grid-auto-rows: minmax(100px, auto);
-  border-radius: 4px;
-  border: 2px solid black;
-}
+@media screen and (min-width: 1000px) {
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+  }
 
-.right-nav {
-  grid-column: 5;
-  grid-row: 2 / 10;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  gap: 20px;
-  border: 2px solid darkolivegreen;
-}
+  h1 {
+    display: inline;
+  }
 
-.about{
-  display: inline;
-  font-size: larger;
-  text-align: right;
-  text-decoration: none;
-  margin-block-start: 1.67em;
-}
-.top-navbar{
-  grid-column: 1 / 6;
-  grid-row: 1;
-  display: flex;
-  flex-direction: row;
-  align-items: space-around;
-  width: 100%;
-  gap: 31vw;
-  border-bottom: 4px solid darkolivegreen;
-}
-.introduction {
-  grid-column: 1 / 5;
-  grid-row: 4 / 10;
-  background-image: url(../images/pretty-harriman.jpg);
-  background-blend-mode: soft-light;
-  background-size: 100% 100%;
-  opacity: 80%;
- 
-}
-.intro-text {
-  font-family:fantasy;
-  kerning: 20px;
-  font-size: large;
-  background-color: aliceblue;
-  margin:100px;
-  border-radius: 4px;
-  padding: 10px;
-  
-}
+  h2 {
+    display: inline;
+  }
 
-footer {
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-}
-s
-.email-form {
-  display: inline;
-}
+  h3 {
+    display: inline;
+  }
 
-#logo{
-  width:100px;
-  height:100px;
-}
-.blog-nav-top{
-  font-family:fantasy;
-  color: darkolivegreen;
-  kerning: 20px;
-  font-size: x-large;
-  border-bottom: 2px solid darkgoldenrod;
-}
-.blog-entry{
-  border: 1px dashed black;
-  margin:2px;
-  padding-top: 2px;
-  padding-bottom: 2px;
-  background-color: rgb(238, 223, 187);
+  a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    text-align: center;
+  }
 
+  .wrapper {
+    display: grid;
+    grid-template-columns: repeat(6, 200px);
+    gap: 40px;
+    grid-auto-rows: minmax(100px, auto);
+    border-radius: 4px;
+    border: 2px solid black;
+  }
+
+  .right-nav {
+    grid-column: 5;
+    grid-row: 2 / 10;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 20px;
+    border: 2px solid darkolivegreen;
+  }
+
+  .about {
+    display: inline;
+    font-size: larger;
+    text-align: right;
+    text-decoration: none;
+    margin-block-start: 1.67em;
+  }
+
+  .top-navbar {
+    grid-column: 1 / 6;
+    grid-row: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: space-around;
+    width: 100%;
+    gap: 31vw;
+    border-bottom: 4px solid darkolivegreen;
+  }
+
+  .introduction {
+    grid-column: 1 / 5;
+    grid-row: 4 / 10;
+    background-image: url(../images/pretty-harriman.jpg);
+    background-blend-mode: soft-light;
+    background-size: 100% 100%;
+    opacity: 80%;
+
+  }
+
+  .intro-text {
+    font-family: fantasy;
+    kerning: 20px;
+    font-size: large;
+    background-color: aliceblue;
+    margin: 100px;
+    border-radius: 4px;
+    padding: 10px;
+
+  }
+
+  footer {
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+  }
+
+  s .email-form {
+    display: inline;
+  }
+
+  #logo {
+    width: 100px;
+    height: 100px;
+  }
+
+  .blog-nav-top {
+    font-family: fantasy;
+    color: darkolivegreen;
+    kerning: 20px;
+    font-size: x-large;
+    border-bottom: 2px solid darkgoldenrod;
+  }
+
+  .blog-entry {
+    border: 1px dashed black;
+    margin: 2px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    background-color: rgb(238, 223, 187);
+
+  }
+
+  #fbicon {
+    height: 35px;
+    width: 35px;
+    vertical-align: bottom;
+  }
+
+  #instaicon {
+    height: 30px;
+    width: 30px;
+    vertical-align: bottom;
+  }
 }
